--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "nonebot2[fastapi]>=2.2.1",
     "httpx>=0.27.0",
     "nonebot-plugin-alconna>=0.42.4",
+    "pyzbar>=0.1.9",
+    "pillow>=10.4.0",
 ]
 
 [tool.nonebot]
